# ferris-compute-cuda

./: .gitignore  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: compute.proto
crates/common/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: main.rs
docs/architecture/: build-script.md  client-cli.md  common-protocol.md  host-engine.md
docs/decisions/: 0001-initial-setup.md  0001a-why-no-src.md  0001b-root-cargo-toml.md  0001c-cargo-init-crates-client-error.md  0002-gitignore-strategy.md  0003-communication-contract.md  0004-execution-engine.md  0005-client-cli-implementation.md  0006-host-cleanup-and-execution.md
