[package]
name = "client"
version.workspace = true
edition.workspace = true

# We’ll use clap for a beautiful CLI interface and colored to distinguish between standard output and compiler errors.
[dependencies]
common = { path = "../common" }
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"